--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ fonttools==4.47.2
 gunicorn==21.2.0
 importlib-resources==6.1.1
 kiwisolver==1.4.5
-matplotlib==3.7.4
-numpy==1.24.4
+matplotlib==3.4.4  # Adjusted version
+numpy==1.21.2  # Adjusted version
 packaging==23.2
-pandas==2.0.3
-pillow==10.2.0
+pandas==1.3.3  # Adjusted version
+pillow==8.3.2  # Adjusted version
 pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.4
